<?xml version="1.0"?>
<package format="2">
  <name>realsense_simulation</name>
  <version>0.0.2</version>
  <description>RealSense Camera description package for simulation</description>
  <maintainer email="sergio.moyano@pal-robotics.com">sergiomoyano</maintainer>
  <license>Propietary</license>
  <author email="sergio.moyano@pal-robotics.com">sergiomoyano</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>rosunit</test_depend>
</package>
